Modification du cv

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
 	
 	<h2>Mon expérience</h2>
 	<ul>
-		<li><strong>De 2013 à 2016 :</strong> Tour du monde</li>
+		<li><strong>De 2013 à 2016 :</strong> Réorientation professionelle </li>
 		<li><strong>De 2010 à 2013 :</strong> Consultant SAP</li>
 	</ul>
 	
